--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <!-- -------------- custom css files --------- -->
     <link rel="stylesheet" href="./css/cleaning.css">
+    <!-- Customized CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style1.css" />
+    <link rel="stylesheet" href="./css/style2.css" />
+    <!-- Font Awesome -->
     <!-- -------------- custom boostrap v. 5.2.3 files --------- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -26,6 +31,70 @@
 
     <!-- ============== homepage start ================= -->
     <div class="container-fluid position-relative">
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary myNvabar">
+            <div class="container-fluid">
+                <!-- <a href="#" class="eeb_logo">
+                  <img src="./images/logo.png" class="img-fluid" alt="">
+                </a> -->
+                <button class="navbar-toggler border border-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+                            viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                        </svg>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse pe-5" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto me-5 pt-0 pb-4 pe-5 mb-2 mb-lg-0">
+                        <li class="nav-item mx-2 navItem">
+                            <a class="nav-link text-uppercase active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item mx-2 navItem">
+                            <a class="nav-link text-uppercase" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item mx-2 navItem dropdown">
+                            <a class="nav-link dropdown-toggle text-uppercase" href="services.html" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Services
+                            </a>
+                            <ul class="dropdown-menu dropdown_bg_clr">
+                                <li>
+                                    <a class="dropdown-item text-uppercase" href="#">Action</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item text-uppercase" href="#">Another action</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider" />
+                                </li>
+                                <li>
+                                    <a class="dropdown-item text-uppercase" href="#">Something else here</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item mx-2 navItem">
+                            <a class="nav-link text-uppercase" href="joinTeam.html">Join Our Team</a>
+                        </li>
+                        <li class="nav-item mx-2 navItem">
+                            <a class="nav-link text-uppercase" href="contactUs.html">Contact Us</a>
+                        </li>
+                        <li class="nav-item mx-2 navItem">
+                            <button class="btn requestBtn py-3 text-uppercase">
+                                Request a Quote
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+
+
+
         <div class="position-absolute cicle_bg_img">
             <img src="./images/img/cicles_img.png" class="img-fluid" alt="">
         </div>
