--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -146,7 +146,7 @@
           </div>
 
           <!-- check div 1 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check p-3">
               <div class="form-check">
                 <input
@@ -162,7 +162,7 @@
             </div>
           </div>
           <!-- check div 2 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check p-3">
               <div class="form-check">
                 <input
@@ -178,7 +178,7 @@
             </div>
           </div>
           <!-- check div 3 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check p-3">
               <div class="form-check">
                 <input
@@ -194,7 +194,7 @@
             </div>
           </div>
           <!-- check div 4 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check__11 form__check p-3">
               <div class="form-check">
                 <input
@@ -210,7 +210,7 @@
             </div>
           </div>
           <!-- check div 5 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check__12 form__check p-3">
               <div class="form-check">
                 <input
@@ -226,7 +226,7 @@
             </div>
           </div>
           <!-- check div 6 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check__12 form__check p-3">
               <div class="form-check">
                 <input
@@ -242,7 +242,7 @@
             </div>
           </div>
           <!-- check div 7 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check__12 form__check p-3">
               <div class="form-check">
                 <input
@@ -258,7 +258,7 @@
             </div>
           </div>
           <!-- check div 8 -->
-          <div class="col-md-3 col-6 ps-0 pe-0">
+          <div class="col-md-3 col-12 ps-md-0 pe-md-0">
             <div class="form__check__13 form__check p-3">
               <div class="form-check">
                 <input
