--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -34,6 +34,9 @@
           <!-- <a href="#" class="eeb_logo">
               <img src="./images/logo.png" class="img-fluid" alt="">
             </a> -->
+            <a href="./index.html" class="eeb_logo">
+              <img src="./images/logo.png" class="img-fluid" alt="">
+            </a>
           <button
             class="navbar-toggler border border-2"
             type="button"
@@ -89,7 +92,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown_bg_clr">
                   <li>
-                    <a class="dropdown-item text-uppercase" href="#">Action</a>
+                    <a class="dropdown-item text-uppercase" href="services.html">Action</a>
                   </li>
                   <li>
                     <a class="dropdown-item text-uppercase" href="#"
@@ -117,9 +120,7 @@
                 >
               </li>
               <li class="nav-item mx-2 navItem">
-                <button class="btn requestBtn py-3 text-uppercase">
-                  Request a Quote
-                </button>
+               <a href="get-a-quote.html"><button class="btn requestBtn py-3 text-uppercase">Request a Quote</button></a>
               </li>
             </ul>
           </div>
