--- a/services.html
+++ b/services.html
@@ -29,6 +29,9 @@
     <div class="container-fluid sbg1">
       <nav class="navbar navbar-expand-lg bg-body-tertiary myNvabar">
         <div class="container-fluid">
+          <a href="./index.html" class="eeb_logo">
+            <img src="./images/logo.png" class="img-fluid" alt="">
+          </a>
           <button
             class="navbar-toggler border border-2"
             type="button"
@@ -84,7 +87,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown_bg_clr">
                   <li>
-                    <a class="dropdown-item text-uppercase" href="#">Action</a>
+                    <a class="dropdown-item text-uppercase" href="services.html">Action</a>
                   </li>
                   <li>
                     <a class="dropdown-item text-uppercase" href="#"
@@ -112,9 +115,7 @@
                 >
               </li>
               <li class="nav-item mx-2 navItem">
-                <button class="btn requestBtn py-3 text-uppercase">
-                  Request a Quote
-                </button>
+               <a href="get-a-quote.html"><button class="btn requestBtn py-3 text-uppercase">Request a Quote</button></a>
               </li>
             </ul>
           </div>
