--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             </div>
 
             <div class="col-md-12">
+
                 <div class="owl-carousel">
                     <div class=" p-md-2 a_tag_img">
 
@@ -196,6 +197,12 @@
                         </a>
                     </div>
                     <!-- Add more card elements here -->
+                </div>
+                <div class="custom-owl-dots">
+                    <div class="owl-dot active"></div>
+                    <div class="owl-dot"></div>
+                    <div class="owl-dot"></div>
+                    <!-- Add more owl-dot elements as per the number of carousel items -->
                 </div>
             </div>
         </div>
