--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <!-- Banner 1 -->
-        <div class="banner__1 mb-5">
+        <div class="banner__1 mb-6">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-center jomarzi">
+        <div class="d-flex justify-content-center">
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="What are you looking for?">
                 <i class="fa-solid fa-location-dot fa-classic location__icon"></i>
@@ -169,7 +169,7 @@
                             <img src="./images/img/card1_img.png" class="img-fluid" alt="">
                             <div class="position-absolute">
                                 <div class="img_icon_div mx-auto">
-                                    <img src="./images/img/bursh_icon.png" class="img-fluid" alt="">
+                                    <img src="./images/img/icon2.png" class="img-fluid" alt="">
                                 </div>
                                 <p class="pt-3 card_text complex-text">Complex and Duplex</p>
                             </div>
@@ -180,9 +180,10 @@
                         <a href="#" class="feature_card d-flex flex-column justify-content-center align-items-center">
                             <img src="./images/img/card2_img.png" class="img-fluid" alt="">
                             <div class="position-absolute">
-                                <div class="img_icon_div">
+                                <div class="img_icon_div mx-auto">
                                     <img src="./images/img/icon2.png" class="img-fluid" alt="">
                                 </div>
+                                <p class="pt-3 card_text complex-text">Complex and Duplex</p>
                             </div>
                         </a>
                     </div>
@@ -190,9 +191,10 @@
                         <a href="#" class="feature_card d-flex flex-column justify-content-center align-items-center">
                             <img src="./images/img/card3_img.png" class="img-fluid" alt="">
                             <div class="position-absolute">
-                                <div class="img_icon_div">
+                                <div class="img_icon_div mx-auto">
                                     <img src="./images/img/icon2.png" class="img-fluid" alt="">
                                 </div>
+                                <p class="pt-3 card_text complex-text">Complex and Duplex</p>
                             </div>
                         </a>
                     </div>
@@ -223,7 +225,7 @@
 
         <div class="row mt-5">
 
-            <div class="col-md-4 col-lg-3 a_tag my-2">
+            <div class="col-md-6 col-lg-3 a_tag my-2">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img1.png" class="img-fluid" alt="">
@@ -232,7 +234,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 a_tag my-2">
+            <div class="col-md-6 col-lg-3 a_tag my-2">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img2.png" class="img-fluid" alt="">
@@ -241,7 +243,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img3.png" class="img-fluid" alt="">
@@ -250,7 +252,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img1.png" class="img-fluid" alt="">
@@ -259,7 +261,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img2.png" class="img-fluid" alt="">
@@ -268,7 +270,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img3.png" class="img-fluid" alt="">
@@ -277,7 +279,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img1.png" class="img-fluid" alt="">
@@ -286,7 +288,7 @@
                 </a>
             </div>
 
-            <div class="col-md-4 col-lg-3 p-2 a_tag">
+            <div class="col-md-6 col-lg-3 p-2 a_tag">
                 <a href="#" class="gallery_card1  d-flex flex-column justify-content-center align-items-center">
                     <div class="gallery_img">
                         <img src="./images/img/gallery_img4.png" class="img-fluid" alt="">
@@ -308,7 +310,7 @@
     <div class="container-fluid mt-5 reduest_free_bg_img">
         <div class="row">
             <div class="col d-flex flex-column align-items-center pt-5">
-                <div class="py-4 text-center">
+                <div class="text-center">
                     <h5 class="request_free_text pt-4">REQUEST A FREE QUOTE</h5>
                     <button class="free_quote_btn mt-5 all_btn">FREE QUOTE</button>
                 </div>
@@ -332,7 +334,7 @@
 
             <div class="row mt-3">
 
-                <div class="col-lg-8  py-md-5">
+                <div class="col-lg-7 py-md-5">
                     <div class="get_in_touch">
                         <p class="get_in_title">Get in touch with us</p>
                         <p class="get_in_text pt-3">Began more than 25 years ago in the kitchen of my uncle's home
@@ -341,60 +343,68 @@
                             gardening at the age of sevenrdening at the age of sevenrdening at the age of sevenrdening
                             at
                             the age of seven rdening at the age of seven</p>
-
                     </div>
 
-                    <div class="communicat_with_us">
-
-                        <a href="#" class="contact_us_card m-md-1 my-1 my-0">
-                            <div class="icon_styling">
-                                <img src="./images/img/location_icon.png" class="img-fluid" alt="">
+                    <div class="row">
+                        <div class="communicat_with_us">
+                            <div class="col-xl-5 col-md-6">
+                                <a href="#" class="contact_us_card me-3 mb-3">
+                                    <div class="icon_styling">
+                                        <img src="./images/img/location_icon.png" class="" alt="">
+                                    </div>
+                                    <div class="d-flex flex-column ms-2">
+                                        <span class="contact_card_title">Location</span>
+                                        <span class="contact_card_text">Lorem, lorem, lorem</span>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="d-flex flex-column mx-4">
-                                <span class="contact_card_title">Location</span>
-                                <span class="contact_card_text">Lorem, lorem, lorem</span>
+                            <div class="col-xl-5 col-md-6">
+                                <a href="#" class="contact_us_card me-3 mb-3">
+                                    <div class="icon_styling">
+                                        <img src="./images/img/phone_icon.png" class="" alt="">
+                                    </div>
+                                    <div class="d-flex flex-column ms-2">
+                                        <span class="contact_card_title">Phone</span>
+                                        <span class="contact_card_text">+1 4587 4587564</span>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-
-                        <a href="#" class="contact_us_card m-md-1 my-1 my-0">
-                            <div class="icon_styling">
-                                <img src="./images/img/phone_icon.png" class="img-fluid" alt="">
-                            </div>
-                            <div class="d-flex flex-column mx-4">
-                                <span class="contact_card_title">Phone</span>
-                                <span class="contact_card_text">+1 4587 4587564</span>
-                            </div>
-                        </a>
-
+                        </div>
                     </div>
 
-                    <div class="communicat_with_us">
+                    <div class="row">
+                        <div class="communicat_with_us">
 
-                        <a href="#" class="contact_us_card m-md-1 my-1 my-0">
-                            <div class="icon_styling">
-                                <img src="./images/img/msg_icon.png" class="img-fluid" alt="">
+                            <div class="col-xl-5 col-md-6">
+                                <a href="#" class="contact_us_card me-3 mb-3">
+                                    <div class="icon_styling">
+                                        <img src="./images/img/msg_icon.png" class="" alt="">
+                                    </div>
+                                    <div class="d-flex flex-column ms-2">
+                                        <span class="contact_card_title">Email Address</span>
+                                        <span class="contact_card_text">support@eeb.com</span>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="d-flex flex-column mx-4">
-                                <span class="contact_card_title">Email Address</span>
-                                <span class="contact_card_text">support@eeb.com</span>
-                            </div>
-                        </a>
 
-                        <a href="#" class="contact_us_card m-md-1 my-1 my-0">
-                            <div class="icon_styling">
-                                <img src="./images/img/watch_icon.png" class="img-fluid" alt="">
+                            <div class="col-xl-5 col-md-6">
+                                <a href="#" class="contact_us_card me-3 mb-3">
+                                    <div class="icon_styling">
+                                        <img src="./images/img/watch_icon.png" class="" alt="">
+                                    </div>
+                                    <div class="d-flex flex-column ms-2">
+                                        <span class="contact_card_title">Availability</span>
+                                        <span class="contact_card_text">24/7</span>
+                                    </div>
+                                </a>
                             </div>
-                            <div class="d-flex flex-column mx-4">
-                                <span class="contact_card_title">Availability</span>
-                                <span class="contact_card_text">24/7</span>
-                            </div>
-                        </a>
 
+                        </div>
                     </div>
 
                 </div>
 
-                <div class="col-lg-4 p-md-5">
+                <div class="col-lg-5 p-lg-5">
                     <img src="./images/img/contact_us_img.png" class="img-fluid" alt="">
                 </div>
 
