--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
                     <div class="row">
                         <div class="communicat_with_us">
-                            <div class="col-xl-5 col-md-6">
+                            <div class="col-xl-5 col-sm-6 col-12">
                                 <a href="#" class="contact_us_card me-3 mb-3">
                                     <div class="icon_styling">
                                         <img src="./images/img/location_icon.png" class="" alt="">
@@ -358,7 +358,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-xl-5 col-md-6">
+                            <div class="col-xl-5 col-sm-6 col-12">
                                 <a href="#" class="contact_us_card me-3 mb-3">
                                     <div class="icon_styling">
                                         <img src="./images/img/phone_icon.png" class="" alt="">
@@ -375,7 +375,7 @@
                     <div class="row">
                         <div class="communicat_with_us">
 
-                            <div class="col-xl-5 col-md-6">
+                            <div class="col-xl-5 col-sm-6 col-12">
                                 <a href="#" class="contact_us_card me-3 mb-3">
                                     <div class="icon_styling">
                                         <img src="./images/img/msg_icon.png" class="" alt="">
@@ -387,7 +387,7 @@
                                 </a>
                             </div>
 
-                            <div class="col-xl-5 col-md-6">
+                            <div class="col-xl-5 col-sm-6 col-12">
                                 <a href="#" class="contact_us_card me-3 mb-3">
                                     <div class="icon_styling">
                                         <img src="./images/img/watch_icon.png" class="" alt="">
