--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
   <!-- main container -->
   <div class="container-fluid bg1 p-sm-5 p-1">
     <div class="row mx-3 my-2">
-      <div class="col-md-7 my-3 pt-2">
+      <div class="col-xl-7 col-12 my-3 pt-2">
         <p class="fos1 mb-5">ABOUT US</p>
         <p class="mb-4 fos2">
           25 Years Experience Lorem <br />
@@ -108,7 +108,7 @@
           of Good and Evil) by Cicero.
         </p>
       </div>
-      <div class="col-md-5 my-3 pt-2">
+      <div class="col-xl-5 col-12 my-3 pt-2">
         <img src="./images/p1.png" alt="" class="aImg" />
       </div>
     </div>
@@ -304,10 +304,10 @@
   <!-- vision section -->
   <div class="container-fluid bg3 p-sm-5 p-1">
     <div class="row mx-3 my-2">
-      <div class="col-md-5 my-3 pt-2">
+      <div class="col-xl-5 col-12 my-3 pt-2">
         <img src="./images/p2.png" alt="" class="aImg Img-fluid" />
       </div>
-      <div class="col-md-7 my-3 pt-2">
+      <div class="col-xl-7 col-12 my-3 pt-2">
         <p class="mb-4 fos4">Our Vision</p>
         <p class="fos1 mb-5">
           Began more than 25 years ago in the kitchen of my uncle's home
@@ -332,7 +332,7 @@
   <!-- vision section end -->
 
   <!-- free quote seection -->
-  <div class="container-fluid bgImage py-y">
+  <div class="container-fluid bgImage py-5">
     <div class="free__quote__section">
       <p class="fos6 py-5">REQUEST A FREE QUOTE</p>
       <div class="pt-3 pb-5 d-flex justify-content-center">
