--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
 
 <body>
   <!-- hero container -->
-  <div class="container-fluid sbg1">
+  <div class="container-fluid heroSection">
     <nav class="navbar navbar-expand-lg bg-body-tertiary myNvabar">
       <div class="container-fluid">
         <a href="./index.html" class="eeb_logo">
@@ -81,7 +81,7 @@
   </div>
 
   <!-- services  container -->
-  <div class="container-flui bg2 px-5">
+  <div class="container-fluid bg2 px-5 py-6">
     <div class="row py-3">
       <div class="col-md-3 my-2">
         <div>
@@ -162,10 +162,12 @@
   <!-- services  container end -->
 
   <!-- free quote seection -->
-  <div class="container-fluid bgImage py-y">
-    <p class="fos6 py-5">REQUEST A FREE QUOTE</p>
-    <div class="pt-3 pb-5 d-flex justify-content-center">
-      <button class="btn quoteBtn px-3">Free Quote</button>
+  <div class="container-fluid bgImage py-5">
+    <div class="free__quote__section">
+      <p class="fos6 py-5">REQUEST A FREE QUOTE</p>
+      <div class="pt-3 pb-5 d-flex justify-content-center">
+        <button class="btn quoteBtn px-5 py-3">Free Quote</button>
+      </div>
     </div>
   </div>
   <!-- free quote section end -->
