--- a/joinTeam.html
+++ b/joinTeam.html
@@ -20,7 +20,7 @@
 
 <body>
   <!-- hero container -->
-  <div class="container-fluid heroSection">
+  <div class="container-fluid heroSection p-0">
     <nav class="navbar navbar-expand-lg bg-body-tertiary myNvabar">
       <div class="container-fluid">
         <!-- <a href="#" class="eeb_logo">
