--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -43,7 +43,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse pe-5" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto me-5 pt-0 pb-4 pe-5 mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto me-5 pt-0 pb-4 pe-6 mb-2 mb-lg-0">
             <li class="nav-item mx-2 navItem">
               <a class="nav-link text-uppercase active" aria-current="page" href="index.html">Home</a>
             </li>
@@ -51,17 +51,13 @@
               <a class="nav-link text-uppercase" href="about.html">About Us</a>
             </li>
             <li class="nav-item mx-2 navItem dropdown">
-              <a class="nav-link dropdown-toggle text-uppercase" href="services.html" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-uppercase" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Services
               </a>
               <ul class="dropdown-menu dropdown_bg_clr">
-                <li>
-                  <a class="dropdown-item text-uppercase" href="services.html">Action</a>
-                </li>
-                <li>
-                  <a class="dropdown-item text-uppercase" href="#">Another action</a>
-                </li>
+                <li><a class="dropdown-item text-uppercase" href="services.html">Action</a></li>
+                <li><a class="dropdown-item text-uppercase" href="#">Another action</a></li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
@@ -77,7 +73,8 @@
               <a class="nav-link text-uppercase" href="contactUs.html">Contact Us</a>
             </li>
             <li class="nav-item mx-2 navItem">
-              <a href="get-a-quote.html"><button class="btn requestBtn py-3 text-uppercase">Request a Quote</button></a>
+              <a href="get-a-quote.html"><button class="btn requestBtn py-3 text-uppercase">Request a
+                  Quote</button></a>
             </li>
           </ul>
         </div>
