--- a/get-a-quote.html
+++ b/get-a-quote.html
@@ -371,36 +371,36 @@
         <div class="section__heading__3 mb-3 ps-0">
           <h3>Tell Us About Yourself</h3>
         </div>
-        <form class="row gx-5">
-          <div class="col-md-6 mb-3 ps-0">
+        <form class="row">
+          <div class="col-md-6 mb-4 ps-md-0 pe-md-3">
             <input type="text" class="form-control form___control" placeholder="First name" aria-label="First name" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-3 pe-md-0">
             <input type="text" class="form-control form___control" placeholder="Last name" aria-label="Last name" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-0 pe-md-3">
             <input type="email" class="form-control form___control" placeholder="Email" id="inputEmail4" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-3 pe-md-0">
             <input type="password" class="form-control form___control" placeholder="Password" id="inputPassword4" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-0 pe-md-3">
             <input type="text" class="form-control form___control" id="inputAddress" placeholder="Address" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-3 pe-md-0">
             <input type="number" class="form-control form___control" placeholder="Postal Code" id="inputnumber" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-0 pe-md-3">
             <input type="text" class="form-control form___control" placeholder="Title" id="inputtitle" />
           </div>
-          <div class="col-md-6 mb-3 ps-0">
+          <div class="col-md-6 mb-4 ps-md-3 pe-md-0">
             <input type="text" class="form-control form___control" placeholder="Company" id="inputcompany" />
           </div>
-          <div class="mb-3 ps-0">
+          <div class="mb-4 ps-md-0 pe-md-0">
             <textarea class="form-control form___control" id="exampleFormControlTextarea1" rows="3"
               placeholder="How did you hear about us"></textarea>
           </div>
-          <div class="form__button">
+          <div class="form__button px-md-0">
             <div class="">
               <button type="submit" class="btn btn-primary form__btn__1">
                 Reset Form
